force-app/main/default/objects/SG_UnifiedAPI_Landing__c/SG_UnifiedAPI_Landing__c.object-meta.xml
<CustomObject>
    <label>SG UnifiedAPI Landing</label>
    <nameField>
        <label>SG UnifiedAPI Landing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SG UnifiedAPI Landings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>