force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/addr_country__c.field-meta.xml
<CustomField>
    <fullName>addr_country__c</fullName>
    <label>Address Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>