force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/addr_streetline__c.field-meta.xml
<CustomField>
    <fullName>addr_streetline__c</fullName>
    <label>Address Streetline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>