force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/br_contact_preferredflavour__c.field-meta.xml
<CustomField>
    <fullName>br_contact_preferredflavour__c</fullName>
    <label>BR Contact Preferred Flavour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>