force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/br_freestylelibre__c.field-meta.xml
<CustomField>
    <fullName>br_freestylelibre__c</fullName>
    <label>BR FreeStyleLibre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>