force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/br_noofpacks__c.field-meta.xml
<CustomField>
    <fullName>br_noofpacks__c</fullName>
    <label>BR Noofpacks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>