force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/br_previousbrandid__c.field-meta.xml
<CustomField>
    <fullName>br_previousbrandid__c</fullName>
    <label>BR Previous Brand ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>