force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/contact_child_height__c.field-meta.xml
<CustomField>
    <fullName>contact_child_height__c</fullName>
    <label>Contact Child Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>