force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/contact_facebook_lead_id__c.field-meta.xml
<CustomField>
    <fullName>contact_facebook_lead_id__c</fullName>
    <label>Contact Facebook Lead Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>