force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/contact_google_click_id__c.field-meta.xml
<CustomField>
    <fullName>contact_google_click_id__c</fullName>
    <label>Contact Google Click Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>