force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/contact_third_party_opt_out__c.field-meta.xml
<CustomField>
    <fullName>contact_third_party_opt_out__c</fullName>
    <label>Contact Third Party Opt Out</label>
    <length>100</length>
    <type>Text</type>
</CustomField>