force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/cr_utmcontent__c.field-meta.xml
<CustomField>
    <fullName>cr_utmcontent__c</fullName>
    <label>CR UTM Content</label>
    <length>100</length>
    <type>Text</type>
</CustomField>