force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/cr_utmmedium__c.field-meta.xml
<CustomField>
    <fullName>cr_utmmedium__c</fullName>
    <label>CR UTM Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>