force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/cr_utmterm__c.field-meta.xml
<CustomField>
    <fullName>cr_utmterm__c</fullName>
    <label>CR UTM Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>