force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/nh_duration_diabetic__c.field-meta.xml
<CustomField>
    <fullName>nh_duration_diabetic__c</fullName>
    <label>NH Duration Diabetic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>