force-app/main/default/objects/SG_UnifiedAPI_Landing__c/fields/nh_sick_frequently__c.field-meta.xml
<CustomField>
    <fullName>nh_sick_frequently__c</fullName>
    <label>NH Sick Frequently</label>
    <length>100</length>
    <type>Text</type>
</CustomField>